--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ black==23.11.0
 isort==5.12.0
 google-api-python-client==2.108.0
 requests==2.31.0
-google-generativeai==0.3.2
+google-genai==1.38.0
 youtube-transcript-api==1.1.0
 flask==3.0.2
