--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,13 @@ services:
     restart: unless-stopped
     env_file:
       - stack.env
+
+  promtail:
+    image: grafana/promtail:2.9.3
+    command: -config.file=/etc/promtail/config.yml -config.expand-env=true
+    environment:
+      LOKI_URL: "http://host.docker.internal:3100/loki/api/v1/push"
+    volumes:
+      - ./promtail-config.yaml:/etc/promtail/config.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
